# market-radar

./: .dockerignore  .gitignore  Dockerfile  README.md  bootstrap_db.py  fly.toml  pyproject.toml  requirements.txt
.github/workflows/: daily-update.yml
.streamlit/: config.toml
compute/: breakout.py  taxonomy_loader.py  theme_index.py  themes_loader.py
config/: __init__.py  chains.yaml  settings.yaml  themes.yaml
config/taxonomy/: README.md
config/taxonomy/tw/: chains.yaml  sectors.yaml  segments.yaml  themes.yaml
connectors/tw/: calendar.py  company_profile.py  daily_prices.py  institutional.py  margin.py  market_index.py  stock_list.py
db/: init_db.py  schema.sql
docs/: DEPLOYMENT.md  FLY_DEPLOY.md  TAXONOMY.md
scrapers/: moneydj_themes.py
scrapers/news/: __init__.py  cnyes.py  linker.py  mops.py  udn_money.py  yahoo_tw.py
scripts/: build_tw_taxonomy.py  compute_themes.py  ingest_company_profile.py  ingest_daily.py  ingest_flow.py  ingest_news.py  seed_cross_market.py
tpex_ic_crawl/: 01_discover_codes.py  02_fetch_all.sh  03_build_data_urls.py  04_parse_industry.py  05_fetch_data_layer.sh  06_parse_companies.py  stocks_meta.json
tpex_ic_crawl/output/: industries.json
tpex_ic_crawl/產業鏈網站素材/: README.md
tpex_ic_crawl/產業鏈網站素材/結構化資料/: codes.json
ui/: _common.py  app.py
ui/pages/: 1_🔥_族群熱力圖.py  2_📊_RS強度排行.py  3_⭐_自選股.py  4_🔍_族群詳細頁.py  5_📈_個股詳細頁.py
